move main.cpp to src/

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,6 @@ set(CMAKE_CXX_STANDARD 14)
 
 find_package(Qt5 REQUIRED COMPONENTS Core Widgets Gui)
 
-set(SOURCE_FILES main.cpp)
+set(SOURCE_FILES src/main.cpp)
 add_executable(rewind ${SOURCE_FILES})
 target_link_libraries(rewind Qt5::Core Qt5::Gui Qt5::Widgets)
