--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "external/rtaudio/repo"]
 	path = external/rtaudio/repo
-	url = https://github.com/thestk/rtaudio
+	url = https://github.com/reBass/rtaudio
